--- a/markup/components/footer/footer.less
+++ b/markup/components/footer/footer.less
@@ -1,3 +1,7 @@
+.uk-footer {
+  margin-top: 24px;
+}
+
 .uk-footer-top {
   border-top: @global-border-width solid @global-border;
   padding-top: 40px;
