--- a/markup/static/less/libraries/components/heading.less
+++ b/markup/static/less/libraries/components/heading.less
@@ -1,10 +1,18 @@
 .hook-heading-misc {
   .uk-heading {
     margin-bottom: 60px;
+
+    @media (max-width: @breakpoint-xsmall-max) {
+      margin-bottom: 30px;
+    }
   }
 
   .uk-heading-title {
-    margin-bottom: 15px;
+    margin-bottom: 8px;
+  }
+
+  .uk-heading-small {
+    font-size: 16px;
   }
 
   .uk-heading-suptitle {
@@ -16,6 +24,12 @@
       margin-top: 0;
     }
 
+  }
+
+  .uk-heading-slash {
+    color: #EAEBED;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
 }
