--- a/markup/static/less/libraries/components/map.less
+++ b/markup/static/less/libraries/components/map.less
@@ -35,7 +35,7 @@
     
     .uk-section-background {
       top: auto;
-      left: auto;
+      left: 10%;
       z-index: -1;
 
       @media (max-width: @breakpoint-xsmall-max) {
