--- a/markup/static/less/libraries/components/swiper.less
+++ b/markup/static/less/libraries/components/swiper.less
@@ -9,6 +9,10 @@
   background-position: center;
 }
 
+[class*='uk-child-width'] .swiper-slide {
+  box-sizing: content-box;
+}
+
 .swiper-slide:first-child {
   padding-left: 0;  
 }
