--- a/markup/static/less/libraries/modules/stock.less
+++ b/markup/static/less/libraries/modules/stock.less
@@ -9,6 +9,7 @@
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
+    line-height: 1.66;
 
     &:hover {
       text-decoration: none;
@@ -61,7 +62,11 @@
 }
 
 .hook-grid-misc() {
-  .uk-grid-cars {
-
+  .uk-stocks-hightlight {
+    overflow: visible;
+    .swiper-slide {
+      width: 40%;
+      min-width: 250px;
+    }
   }
 }
