--- a/markup/static/less/libraries/modules/vacancy.less
+++ b/markup/static/less/libraries/modules/vacancy.less
@@ -21,18 +21,7 @@
       }
     }
 
-    &.uk-card-vacancy-secondary {
-      padding-left: 80px;
-      font-size: 14px;
-      .uk-logo-dealer {
-        top: 0;
-        width: 60px;
-        height: 60px;
-      }
-      .uk-card-title {
-        font-size: 22px;
-      }
-    }
+    
 
     .uk-card-title {
       font-size: 18px;
@@ -68,6 +57,25 @@
           }
         }
       }
+    }
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
+
+  }
+
+  .uk-card-vacancy-secondary {
+    padding-left: 80px;
+    font-size: 14px;
+    .uk-logo-dealer {
+      top: 0;
+      width: 60px;
+      height: 60px;
+    }
+    .uk-card-title {
+      font-size: 22px;
     }
   }
 }
