--- a/markup/static/less/libraries/components/base.less
+++ b/markup/static/less/libraries/components/base.less
@@ -11,169 +11,234 @@
 // Variables
 // ========================================================================
 
-@base-body-background:                          @global-background;
-@base-body-font-family:                         @global-font-family;
-@base-body-font-weight:                         normal;
-@base-body-font-size:                           @global-font-size;
-@base-body-line-height:                         @global-line-height;
-@base-body-color:                               @global-color;
+@base-body-background: @global-background;
+@base-body-font-family: @global-font-family;
+@base-body-font-weight: normal;
+@base-body-font-size: @global-font-size;
+@base-body-line-height: @global-line-height;
+@base-body-color: @global-color;
 
-@base-link-color:                               @global-link-color;
-@base-link-text-decoration:                     none;
-@base-link-hover-color:                         @global-link-hover-color;
-@base-link-hover-text-decoration:               underline;
+@base-link-color: @global-link-color;
+@base-link-text-decoration: none;
+@base-link-hover-color: @global-link-hover-color;
+@base-link-hover-text-decoration: underline;
 
-@base-strong-font-weight:                       bolder;
-@base-code-font-size:                           @global-small-font-size;
-@base-code-font-family:                         Consolas, monaco, monospace;
-@base-code-color:                               @global-danger-background;
-@base-em-color:                                 @global-danger-background;
-@base-ins-background:                           #ffd;
-@base-ins-color:                                @global-color;
-@base-mark-background:                          #ffd;
-@base-mark-color:                               @global-color;
-@base-quote-font-style:                         italic;
-@base-small-font-size:                          80%;
+@base-strong-font-weight: bolder;
+@base-code-font-size: @global-small-font-size;
+@base-code-font-family: Consolas, monaco, monospace;
+@base-code-color: @global-danger-background;
+@base-em-color: @global-danger-background;
+@base-ins-background: #ffd;
+@base-ins-color: @global-color;
+@base-mark-background: #ffd;
+@base-mark-color: @global-color;
+@base-quote-font-style: italic;
+@base-small-font-size: 80%;
 
-@base-margin-vertical:                          @global-margin;
+@base-margin-vertical: @global-margin;
 
-@base-heading-font-family:                      @global-font-family;
-@base-heading-font-weight:                      normal;
-@base-heading-color:                            @global-emphasis-color;
-@base-heading-text-transform:                   none;
-@base-heading-margin-top:                       @global-medium-margin;
-@base-h1-font-size-m:                           @global-xxlarge-font-size;
-@base-h1-font-size:                             @base-h1-font-size-m * 0.85;
-@base-h1-line-height:                           1.2;
-@base-h2-font-size-m:                           @global-xlarge-font-size;
-@base-h2-font-size:                             @base-h2-font-size-m * 0.85;
-@base-h2-line-height:                           1.3;
-@base-h3-font-size:                             @global-large-font-size;
-@base-h3-line-height:                           1.4;
-@base-h4-font-size:                             @global-medium-font-size;
-@base-h4-line-height:                           1.4;
-@base-h5-font-size:                             @global-font-size;
-@base-h5-line-height:                           1.4;
-@base-h6-font-size:                             @global-small-font-size;
-@base-h6-line-height:                           1.4;
+@base-heading-font-family: @global-font-family;
+@base-heading-font-weight: normal;
+@base-heading-color: @global-emphasis-color;
+@base-heading-text-transform: none;
+@base-heading-margin-top: @global-medium-margin;
+@base-h1-font-size-m: @global-xxlarge-font-size;
+@base-h1-font-size: @base-h1-font-size-m * 0.85;
+@base-h1-line-height: 1.2;
+@base-h2-font-size-m: @global-xlarge-font-size;
+@base-h2-font-size: @base-h2-font-size-m * 0.85;
+@base-h2-line-height: 1.3;
+@base-h3-font-size: @global-large-font-size;
+@base-h3-line-height: 1.4;
+@base-h4-font-size: @global-medium-font-size;
+@base-h4-line-height: 1.4;
+@base-h5-font-size: @global-font-size;
+@base-h5-line-height: 1.4;
+@base-h6-font-size: @global-small-font-size;
+@base-h6-line-height: 1.4;
 
-@base-list-padding-left:                        30px;
+@base-list-padding-left: 30px;
 
-@base-hr-margin-vertical:                       @global-margin;
-@base-hr-border-width:                          @global-border-width;
-@base-hr-border:                                @global-border;
+@base-hr-margin-vertical: @global-margin;
+@base-hr-border-width: @global-border-width;
+@base-hr-border: @global-border;
 
-@base-blockquote-font-size:                     @global-medium-font-size;
-@base-blockquote-line-height:                   1.5;
-@base-blockquote-font-style:                    italic;
-@base-blockquote-margin-vertical:               @global-margin;
-@base-blockquote-footer-margin-top:             @global-small-margin;
-@base-blockquote-footer-font-size:              @global-small-font-size;
-@base-blockquote-footer-line-height:            1.5;
+@base-blockquote-font-size: @global-medium-font-size;
+@base-blockquote-line-height: 1.5;
+@base-blockquote-font-style: italic;
+@base-blockquote-margin-vertical: @global-margin;
+@base-blockquote-footer-margin-top: @global-small-margin;
+@base-blockquote-footer-font-size: @global-small-font-size;
+@base-blockquote-footer-line-height: 1.5;
 
-@base-pre-font-size:                            @global-small-font-size;
-@base-pre-line-height:                          1.5;
-@base-pre-font-family:                          @base-code-font-family;
-@base-pre-color:                                @global-color;
+@base-pre-font-size: @global-small-font-size;
+@base-pre-line-height: 1.5;
+@base-pre-font-family: @base-code-font-family;
+@base-pre-color: @global-color;
 
-@base-selection-background:                     #39f;
-@base-selection-color:                          @global-inverse-color;
+@base-selection-background: #39f;
+@base-selection-color: @global-inverse-color;
 
 
 // Hooks
 // ========================================================================
 
 .hook-base-body() {
-  font-weight: 300;
+    font-weight: 300;
 
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 16px;
-    line-height: 1.4;
-  }
+    @media (max-width: @breakpoint-small-max) {
+        font-size: 16px;
+        line-height: 1.6;
+    }
 }
+
 .hook-base-link() {}
+
 .hook-base-link-hover() {}
+
 .hook-base-code() {}
+
 .hook-base-heading() {}
+
 .hook-base-h1() {
-  font-weight: 100;
-
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 28px;
-  }
-}
-.hook-base-h2() {
-  font-weight: 100;
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 24px;
-  }
-}
-.hook-base-h3() {
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 20px;
-  }
-}
-.hook-base-h4() {
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 20px;
-  }
-}
-.hook-base-h5() {}
-.hook-base-h6() {}
-.hook-base-hr() {}
-.hook-base-blockquote() {}
-.hook-base-blockquote-footer() {}
-.hook-base-pre() {}
-
-.hook-base-misc() {
-  .uk-text-lead {
-    line-height: 1.63;
-    font-size: 1.22rem;
-    margin-bottom: 30px;
     font-weight: 100;
 
     @media (max-width: @breakpoint-small-max) {
-      font-size: 18px;
+        font-size: 28px;
     }
-  }
-  .uk-date {
-    font-size: 14px;
-    opacity: 0.6;
-  }
-  .uk-back {
-    font-size: 14px;
-    opacity: 0.6;
-    
-    > :first-child {
-      margin-right: 15px;
+}
+
+.hook-base-h2() {
+    font-weight: 100;
+
+    @media (max-width: @breakpoint-small-max) {
+        font-size: 24px;
     }
-  }
+}
+
+.hook-base-h3() {
+    @media (max-width: @breakpoint-small-max) {
+        font-size: 20px;
+    }
+}
+
+.hook-base-h4() {
+    @media (max-width: @breakpoint-small-max) {
+        font-size: 20px;
+    }
+}
+
+.hook-base-h5() {}
+
+.hook-base-h6() {}
+
+.hook-base-hr() {}
+
+.hook-base-blockquote() {}
+
+.hook-base-blockquote-footer() {}
+
+.hook-base-pre() {}
+
+.hook-base-misc() {
+    strong, b {
+        font-weight: 500;
+    }
+    .uk-text-lead {
+        line-height: 1.63;
+        font-size: 1.22rem;
+        margin-bottom: 30px;
+        font-weight: 100;
+
+        @media (max-width: @breakpoint-small-max) {
+            font-size: 18px;
+        }
+    }
+
+    .uk-date {
+        font-size: 14px;
+        opacity: 0.6;
+    }
+
+    .uk-back {
+        font-size: 14px;
+        opacity: 0.6;
+
+        > :first-child {
+            margin-right: 15px;
+        }
+    }
+
+    .uk-link,
+    .uk-link-secondary {
+        position: relative;
+        display: inline-block;
+        line-height: 1.5;
+
+        &:hover {
+            text-decoration: none;
+
+            &:before {
+                border-color: @global-link-hover-color;
+            }
+        }
+
+        &:before {
+            position: absolute;
+            content: "";
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: 1px;
+            border-bottom: 1px dashed @global-link-color;
+        }
+    }
+
+    .uk-link-secondary {
+        color: @global-muted-color;
+
+        &:before {
+            border-color: @global-muted-color;
+        }
+    }
 }
 
 
 // Inverse
 // ========================================================================
 
-@inverse-base-color:                           @inverse-global-color;
-@inverse-base-link-color:                      @inverse-global-emphasis-color;
-@inverse-base-link-hover-color:                @inverse-global-emphasis-color;
-@inverse-base-code-color:                      @inverse-global-color;
-@inverse-base-em-color:                        @inverse-global-emphasis-color;
-@inverse-base-heading-color:                   @inverse-global-emphasis-color;
-@inverse-base-hr-border:                       @inverse-global-border;
+@inverse-base-color: @inverse-global-color;
+@inverse-base-link-color: @inverse-global-emphasis-color;
+@inverse-base-link-hover-color: @inverse-global-emphasis-color;
+@inverse-base-code-color: @inverse-global-color;
+@inverse-base-em-color: @inverse-global-emphasis-color;
+@inverse-base-heading-color: @inverse-global-emphasis-color;
+@inverse-base-hr-border: @inverse-global-border;
 
 .hook-inverse() {}
 
 .hook-inverse-base-link() {}
+
 .hook-inverse-base-link-hover() {}
+
 .hook-inverse-base-code() {}
+
 .hook-inverse-base-heading() {}
+
 .hook-inverse-base-h1() {}
+
 .hook-inverse-base-h2() {}
+
 .hook-inverse-base-h3() {}
+
 .hook-inverse-base-h4() {}
+
 .hook-inverse-base-h5() {}
+
 .hook-inverse-base-h6() {}
+
 .hook-inverse-base-blockquote() {}
+
 .hook-inverse-base-blockquote-footer() {}
+
 .hook-inverse-base-hr() {}
