--- a/markup/static/less/libraries/components/hero.less
+++ b/markup/static/less/libraries/components/hero.less
@@ -15,10 +15,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  flex-grow: 1;
 }
 
 .uk-hero-content {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .uk-hero-background {
@@ -61,10 +64,11 @@
   display: none;
 }
 
-// .uk-hero-header {
-//   padding-top: 40px;
-//   padding-bottom: 40px;
-// }
+.uk-hero-header {
+  flex-shrink: 0;
+  // padding-top: 40px;
+  // padding-bottom: 40px;
+}
 
 .uk-hero-body {
   padding-top: 50px;
@@ -79,11 +83,11 @@
 .uk-hero-heading {
   font-size: 100px;
   font-weight: bold;
-  line-height: 1;
+  line-height: normal;
+  margin-bottom: 10px;
 
   @media (max-width: @breakpoint-small-max) {
     font-size: 80px;
-    margin-bottom: 8px;
   }
 
   @media (max-width: @breakpoint-xsmall-max) {
@@ -93,12 +97,13 @@
 
 .uk-hero-description {
   font-size: 24px;
-  line-height: normal;
+  line-height: 1.58;
   font-weight: 100;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 
   @media (max-width: @breakpoint-xsmall-max) {
     font-size: 18px;
+    margin-bottom: 18px;
   }
 }
 
@@ -140,11 +145,11 @@
 
 
 .uk-hero-main {
-  min-height: 700px;
+  min-height: 660px;
 
-  @media (max-width: @breakpoint-small-max) {
-    min-height: 100vh;
-  }
+  // @media (max-width: @breakpoint-small-max) {
+  //   min-height: 100vh;
+  // }
 
   .uk-hero-background,
   .uk-hero-overlay {
