--- a/markup/static/less/libraries/components/section.less
+++ b/markup/static/less/libraries/components/section.less
@@ -32,7 +32,7 @@
 @section-large-padding-vertical-m:                80px;
 
 @section-xlarge-padding-vertical:                 @global-xlarge-margin;
-@section-xlarge-padding-vertical-m:               (@global-large-margin + @global-xlarge-margin);
+@section-xlarge-padding-vertical-m:               120px;
 
 @section-default-background:                      @global-background;
 
