--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -98,18 +98,29 @@
 }
 
 .hook-grid-misc() {
-  .uk-grid-cars {
+  .uk-models-hightlight {
+    overflow: visible;
 
+    .swiper-slide {
+      width: 25%;
+      min-width: 220px;
+    }
   }
 }
 
 .hook-section-misc() {
-  .uk-section-cars {}
-  .uk-section-car {}
 
+  .uk-section-car {
+    padding-top: 10px;
+  }
 
-  .uk-car {
+  .uk-section-cars-overview {
+    padding-top: 10px;
+  }
 
+  .uk-section-cars-empty {
+    padding-top: 10px;
+    padding-bottom: 0;
   }
 
   .uk-car-heading {
@@ -248,6 +259,11 @@
     }
   }
 
+  .uk-grid > .uk-car-actions {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
   .uk-car-dealer {
     line-height: normal;
     display: flex;
@@ -272,6 +288,37 @@
 
   .uk-car-dealer-link {
     font-size: 14px;
+  }
+
+  .uk-section-filter-cars {
+    text-align: center;
+  }
+  
+  .uk-filter-cars {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .uk-filter-cars-overview {
+    font-size: 16px;
+    margin-bottom: 50px;
+  }
+
+  .uk-filter-cars {
+    @media (max-width: @breakpoint-xsmall-max) {
+      .uk-filter-controls {
+        > * {
+          width: 100%;
+        }
+      }
+      .uk-form-width-large {
+        width: 100%;
+      }
+      .uk-form-width-medium {
+        width: 100%;
+      }
+    }
   }
 
 }
