--- a/markup/static/less/libraries/modules/person.less
+++ b/markup/static/less/libraries/modules/person.less
@@ -11,6 +11,10 @@
     .uk-card-top {
       margin-bottom: 30px;
       flex-shrink: 0;
+
+      @media (max-width: @breakpoint-xsmall-max) {
+        margin-bottom: 18px;
+      }
     }
 
     .uk-card-body {
@@ -29,6 +33,11 @@
         border-radius: inherit;
         object-fit: cover;
       }
+
+      @media (max-width: @breakpoint-xsmall-max) {
+        width: 110px;
+        height: 110px;
+      }
     }
 
     .uk-card-person-name {
@@ -36,11 +45,19 @@
       line-height: 1.5;
       font-weight: 400;
       margin-bottom: 8px;
+
+      @media (max-width: @breakpoint-xsmall-max) {
+        font-size: 16px;
+      }
     }
 
     .uk-card-person-position {
       font-size: 14px;
       line-height: 1.71;
+
+      @media (max-width: @breakpoint-xsmall-max) {
+        font-size: 12px;
+      }
     }
   }
 
@@ -110,7 +127,7 @@
       font-size: 28px;
     }
   }
-  .uk-full-person-position {}
+
   .uk-full-person-contacts {
     display: flex;
     flex-wrap: wrap;
@@ -122,16 +139,16 @@
       padding: 10px 30px;
     }
   }
-  .uk-full-person-contact {
 
-  }
   .uk-full-person-contact-label {
     font-size: 14px;
   }
+
   .uk-full-person-contact-phone {
     font-weight: 500;
     font-size: 22px;
   }
+
   .uk-full-person-contact-email {
     text-decoration: underline;
   }
@@ -148,5 +165,9 @@
       display: flex;
       align-items: flex-end;
     }
+  }
+
+  .uk-section-persons-main {
+    padding-top: 10px;
   }
 }
