partners souvenirs succes-story

--- a/markup/static/less/libraries/modules/souvenir.less
+++ b/markup/static/less/libraries/modules/souvenir.less
@@ -35,7 +35,16 @@
 }
 
 .hook-section-misc() {
-
+  .uk-section-souvenirs {
+    padding-top: 10px;
+    .uk-filter-souvenirs {
+      width: 100%;
+    }
+    .uk-section-description {
+      color: @global-muted-color;
+      font-size: 16px;
+    }
+  }
 }
 
 .hook-grid-misc() {
