--- a/markup/static/less/libraries/modules/partner.less
+++ b/markup/static/less/libraries/modules/partner.less
@@ -20,10 +20,76 @@
       }
     }
   }
+
+  .uk-card-partner-description {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    @media (min-width: @breakpoint-small) {
+      min-height: 300px;
+    }
+
+    p {
+      margin-top: 0;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    .uk-card-background {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .uk-card-overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0.85;
+    }
+    .uk-card-foreground {
+      position: relative;
+      box-sizing: border-box;
+      min-height: inherit;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 20px;
+      font-size: 16px;
+
+      @media (min-width: @breakpoint-medium) {
+        padding: 30px 40px;
+      }
+    }
+
+    .uk-card-closed {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      fill: @global-inverse-color;
+      line-height: 1;
+      svg {
+        font-size: 12px;
+        opacity: .4;
+      }
+    }
+  }
 }
 
 .hook-section-misc() {
-  
+  .uk-section-partners {
+    padding-top: 10px;
+  }
 }
 
 .hook-grid-misc() {
