--- a/markup/static/less/libraries/modules/succes-story.less
+++ b/markup/static/less/libraries/modules/succes-story.less
@@ -1,11 +1,49 @@
 .hook-card-misc() {
+
+  .uk-card-succes-story-1,
+  .uk-card-succes-story-2,
+  .uk-card-succes-story-3 {
+    .uk-card-title {
+      position: relative;
+      padding-top: 40px;
+      font-weight: 500;
+
+      .uk-title-decore {
+        position: absolute;
+        top: 0;
+        left: 0;
+        line-height: 1;
+        display: block;
+      }
+    }
+
+    .uk-card-person-position {
+      font-size: 16px;
+      font-weight: 300;
+    }
+
+    .uk-title-decore {
+      svg {
+        width: auto;
+        height: auto;
+        max-width: 100%;
+      }
+    }
+  }
+
   .uk-card-succes-story-1 {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
     font-weight: 100;
-    @media (min-width: @breakpoint-medium) {
+    height: 100%;
+    @media (min-width: @breakpoint-small) {
       min-height: 480px;
+    }
+
+    .uk-card-title {
+      font-size: 22px;
+      margin: auto 0;
     }
 
     .uk-card-background {
@@ -27,7 +65,6 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background-color: @background-primary-background;
       opacity: 0.85;
     }
     .uk-card-foreground {
@@ -45,10 +82,108 @@
     }
   }
   
+  .uk-card-succes-story-2 {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 16px;
+
+    .uk-card-title {
+      font-size: 18px;
+      padding-top: 70px;
+      .uk-title-decore {
+        top: 30px;
+      }
+    }
+
+    .uk-card-person-4 {
+      max-width: 100%;
+      @media (min-width: @breakpoint-small) {
+        max-width: 260px;
+      }
+    }
+  }
+
+  .uk-card-succes-story-3 {
+    padding: 20px 20px 30px;
+    border-radius: 10px;
+    @media (min-width: @breakpoint-small) {
+      padding: 40px 40px 60px;
+    }
+
+    .uk-card-title {
+      font-size: 22px;
+      margin-bottom: 40px;
+    }
+
+    &.uk-border {
+      border: 3px solid @global-warning-background;
+    }
+
+    .uk-card-person-3 {
+      flex-direction: column;
+      align-items: flex-start;
+      .uk-card-top {
+        margin-bottom: 18px;
+        @media (min-width: @breakpoint-small) {
+          margin-bottom: 0;
+        }
+      }
+      @media (min-width: @breakpoint-small) {
+        flex-direction: row;
+        align-items: center;
+
+      }
+    }
+  }
+
+  .uk-card-send-resume {
+    padding: 30px 0;
+    .uk-card-title {
+      font-size: 28px;
+      position: relative;
+      padding-top: 40px;
+      .uk-title-decore {
+        position: absolute;
+        top: -17px;
+        left: 50%;
+        transform: translateX(-50%);
+        svg {
+          width: auto;
+          height: auto;
+          max-width: 100%;
+        }
+      }
+    }
+  }
 }
 
 .hook-section-misc() {
+  .uk-section-succes-story {
+    padding-top: 10px;
 
+    .uk-article-title {
+      margin: 20px 0 40px;
+      
+      @media (min-width: @breakpoint-small) {
+        font-size: 40px;
+      }
+    }
+  }
+  .uk-article-succes-story {
+    margin-bottom: 50px;
+    @media (min-width: @breakpoint-medium) {
+      margin-bottom: 120px;
+    }
+    .uk-back {
+      color: @global-color;
+    }
+  }
+
+  .uk-section-succes-storys {
+    padding-top: 10px;
+  }
 }
 
 .hook-grid-misc() {
