add drilldown add modal fix menu

--- a/markup/static/less/libraries/components/logo.less
+++ b/markup/static/less/libraries/components/logo.less
@@ -23,7 +23,15 @@
   // color: #ACACAE;
 }
 
-.uk-hero {
+// &.uk-sticky {
+//   &.uk-active {
+//     background-color: #fff;
+//     color: @global-color;
+//     box-shadow: 0px 5px 20px rgba(48, 48, 50, 0.07);
+//   }
+// }
+
+.uk-hero .uk-navbar-container:not(.uk-active) {
   .uk-logo:not(.uk-logo-default) .uk-logo-image {
     svg * {
       fill: currentColor;
