--- a/markup/static/less/libraries/components/map.less
+++ b/markup/static/less/libraries/components/map.less
@@ -48,6 +48,11 @@
     .uk-section-foreground {
       display: flex;
       align-items: flex-end;
+      pointer-events: none;
+
+      [class*='uk-width'] {
+        pointer-events: all;
+      }
     }
 
     @media (min-width: @breakpoint-small) {
