--- a/markup/static/less/libraries/components/offcanvas.less
+++ b/markup/static/less/libraries/components/offcanvas.less
@@ -45,12 +45,14 @@
 
 .hook-offcanvas-bar() {
   padding: 0;
+  width: 90%;
+  max-width: 480px;
 }
 .hook-offcanvas-close() {}
 .hook-offcanvas-overlay() {}
 .hook-offcanvas-misc() {
   .uk-offcanvas {
-    top: 60px;
+    top: 67px;
   }
 
   .uk-nav-offcanvas {
