--- a/markup/components/navbar/navbar.html
+++ b/markup/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="uk-navbar-container uk-navbar-transparent">
+<nav class="uk-navbar-container uk-navbar-transparent" data-uk-sticky="media: (max-width: 959px)">
   <div class="uk-container">
       <div class="uk-navbar" data-uk-navbar>
           <div class="uk-navbar-left">
@@ -27,29 +27,107 @@
 <div id="offcanvas-navbar" class="uk-offcanvas" data-uk-offcanvas="flip: true; overlay: true">
     <div class="uk-offcanvas-bar">
 
-        <ul class="uk-nav uk-nav-offcanvas" data-uk-nav>
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li class="uk-parent">
-                <a href="#" data-uk-icon="icon: chevron-right">Parent</a>
-                <ul class="uk-nav-sub">
-                    <li><a href="#">Sub item</a></li>
-                    <li>
-                        <a href="#">Sub item</a>
-                        <ul>
-                            <li><a href="#">Sub item</a></li>
-                            <li><a href="#">Sub item</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="uk-parent">
-                <a href="#" data-uk-icon="icon: chevron-right">Parent</a>
-                <ul class="uk-nav-sub">
-                    <li><a href="#">Sub item</a></li>
-                    <li><a href="#">Sub item</a></li>
-                </ul>
-            </li>
-        </ul>
+        <div class="drilldown">
+            <div class="drilldown-container">
+            
+              <ul class="drilldown-root">
+                <li>
+                    <a data-uk-icon="icon: chevron-right"><b>Автосалоны</b></a>
+                    <ul class="drilldown-sub">
+                        <li class="drilldown-back"><a data-uk-icon="icon: chevron-left">Назад</a></li>
+                        <li><a href="#"><img src="%=static=%img/content/mercedes-benz.png" alt="" class="drilldown-icon"><b>Mercedes-Benz</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/vw.png" alt="" class="drilldown-icon"><b>Volkswagen</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/renault.png" alt="" class="drilldown-icon"><b>Renault</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/mitsubushi.png" alt="" class="drilldown-icon"><b>Mitsubishi</b></a></li>
+                        <li><a href="#">История компании</a></li>
+                        <li><a href="#">Наша философия</a></li>
+                        <li><a href="#">Истории успеха сотрудников</a></li>
+                        <li><a href="#">Руководство</a></li>
+                    </ul>
+                </li>
+                <li>
+                  <a data-uk-icon="icon: chevron-right"><b>Грузовая техника</b></a>
+                  <ul class="drilldown-sub">
+                        <li class="drilldown-back"><a data-uk-icon="icon: chevron-left">Назад</a></li>
+                        <li><a href="#"><img src="%=static=%img/content/mercedes-benz.png" alt="" class="drilldown-icon"><b>Mercedes-Benz</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/vw.png" alt="" class="drilldown-icon"><b>Volkswagen</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/renault.png" alt="" class="drilldown-icon"><b>Renault</b></a></li>
+                        <li><a href="#"><img src="%=static=%img/content/mitsubushi.png" alt="" class="drilldown-icon"><b>Mitsubishi</b></a></li>
+                        <li><a href="#">История компании</a></li>
+                        <li><a href="#">Наша философия</a></li>
+                        <li><a href="#">Истории успеха сотрудников</a></li>
+                        <li><a href="#">Руководство</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a data-uk-icon="icon: chevron-right"><b>Все услуги</b></a>
+                    <ul class="drilldown-sub">
+                        <li class="drilldown-back"><a data-uk-icon="icon: chevron-left">Назад</a></li>
+                        <li><a href="#">Услуга 1</a></li>
+                        <li><a href="#">Услуга 2</a></li>
+                        <li><a href="#">Услуга 3</a></li>
+                        <li><a href="#">Услуга 4</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a data-uk-icon="icon: chevron-right"><b>О компании</b></a>
+                    <ul class="drilldown-sub">
+                        <li class="drilldown-back"><a data-uk-icon="icon: chevron-left">Назад</a></li>
+                        <li><a href="#">О компании 1</a></li>
+                        <li><a href="#">О компании 2</a></li>
+                        <li><a href="#">О компании 3</a></li>
+                        <li><a href="#">О компании 4</a></li>
+                    </ul>
+                </li>
+                <li><a>Авто в наличии</a></li>
+                <li><a>Акции</a></li>
+                <li><a>Вакансии</a></li>
+                <li class="uk-margin-small-top">
+                    <div class="uk-container">
+                        <div class="uk-grid uk-grid-match uk-child-width-1-1" data-uk-grid="margin: uk-grid-margin-small">
+                            <div>
+                                <a href="#" class="uk-card uk-card-feature">
+                                    <div class="uk-card-left">
+                                        <div class="uk-card-icon">
+                                            {{Icon iconName="steering-wheel"}}
+                                        </div>
+                                    </div>
+                                    <div class="uk-card-body">
+                                        <div class="uk-card-title">Записаться на тест-драйв</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="#" class="uk-card uk-card-feature">
+                                    <div class="uk-card-left">
+                                        <div class="uk-card-icon">
+                                            {{Icon iconName="cogwheels"}}
+                                        </div>
+                                    </div>
+                                    <div class="uk-card-body">
+                                        <div class="uk-card-title">Записаться на сервис</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="uk-width-expand">
+                                <a href="#" class="uk-card uk-card-feature">
+                                    <div class="uk-card-left">
+                                        <div class="uk-card-icon">
+                                            {{Icon iconName="manager"}}
+                                        </div>
+                                    </div>
+                                    <div class="uk-card-body">
+                                        <div class="uk-card-title">Финансовый сервис</div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+              </ul>
+              
+            </div>
+        </div>
 
     </div>
 </div>
