--- a/markup/static/less/libraries/components/feature.less
+++ b/markup/static/less/libraries/components/feature.less
@@ -55,6 +55,10 @@
 
     @media (max-width: @breakpoint-small-max) {
       // flex-wrap: wrap;
+      padding: 20px 25px;
+      .uk-card-title {
+        font-size: 16px;
+      }
     }
   }
 }
