--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -72,6 +72,17 @@
         display: none;
       }
     }
+
+    .uk-card-specification {
+      list-style: none;
+      padding-left: 0;
+      color: @global-color;
+      margin-top: 0;
+      .uk-specification-indicator {
+        font-weight: 500;
+        padding-left: 3px;
+      }
+    }
     
     .uk-price-holder {
       display: flex;
