--- a/markup/static/less/libraries/modules/modals.less
+++ b/markup/static/less/libraries/modules/modals.less
@@ -70,6 +70,52 @@
     @media (min-width: @breakpoint-small) {
       height: 230px;
     }
+  }
+}
 
+.uk-modal-summary {
+  .uk-resume-loading, 
+  .uk-photo-loading {
+    .uk-loading {
+      font-weight: 500;
+      display: block;
+      line-height: 1.3;
+    }
+    .uk-note, .uk-uploaded-file {
+      font-size: 14px;
+      display: inline-block;
+      color: @global-muted-color;
+    }
+    .uk-uploaded-file {
+      color: @global-success-background;
+      font-weight: 500;
+      position: relative;
+      padding-right: 15px;
+
+      &:before {
+        position: absolute;
+        content: "";
+        width: 6px;
+        height: 3px;
+        border: 2px solid @global-success-background;
+        border-top: none;
+        border-right: none;
+        right: 0;
+        top: 50%;
+        transform: rotate(-45deg) translateY(-51%);
+      }
+    }
+  }
+}
+
+.uk-modal-application-cars {
+  .uk-card-car {
+    box-shadow: none;
+    .uk-card-body {
+      padding: 20px 0;
+    }
+    .uk-card-title {
+      font-size: 22px;
+    }
   }
 }
