trade-in partnership

--- a/markup/static/less/libraries/modules/credit.less
+++ b/markup/static/less/libraries/modules/credit.less
@@ -105,6 +105,21 @@
     }
   }
 
+  .uk-card-contact-person-2 {
+    border: none;
+    .uk-card-foreground {
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .uk-card-decore {
+      right: 0;
+      
+      @media (min-width: @breakpoint-small) {
+        top: 60px;
+      }
+    }
+  }
+
   .uk-footnote-label {
     color: @global-danger-background;
     font-weight: 500;
