--- a/markup/static/less/libraries/modules/contact.less
+++ b/markup/static/less/libraries/modules/contact.less
@@ -8,6 +8,17 @@
 				min-height: 640px;
 			}
 		}
+
+		.uk-section-background-decore {
+			left: auto;
+			bottom: auto;
+			top: 40%;
+			right: 3%;
+			z-index: 1;
+			@media (min-width: @breakpoint-medium) {
+				top: 65%;
+			}
+		}
 		
 		.uk-hero-overlay {
 			opacity: .6;
