--- a/markup/static/less/libraries/modules/stock.less
+++ b/markup/static/less/libraries/modules/stock.less
@@ -49,6 +49,16 @@
     .uk-filter-stock {
       margin-bottom: 60px;
     }
+
+    .uk-not-found-block {
+      position: relative;
+      .uk-section-background-decore {
+        top: auto;
+        left: auto;
+        bottom: -30px;
+        z-index: -1;
+      }
+    }
   }
 }
 
