--- a/markup/static/less/libraries/modules/vacancy.less
+++ b/markup/static/less/libraries/modules/vacancy.less
@@ -93,6 +93,17 @@
     .uk-list-vacancy {
       margin-bottom: 50px;
     }
+
+    .uk-filter-vacancy-holder {
+      position: relative;
+      .uk-section-background-decore {
+        top: 14%;
+        left: auto;
+        bottom: auto;
+        right: -20px;
+        z-index: -1;
+      }
+    }
   }
 
   .uk-section-vacancy {
@@ -112,6 +123,17 @@
         &:last-child {
           margin-top: 20px;
         }
+      }
+    }
+
+    .uk-not-found-block {
+      position: relative;
+      .uk-section-background-decore {
+        left: auto;
+        bottom: auto;
+        top: -115px;
+        right: -15px;
+        z-index: -1;
       }
     }
   }
