--- a/markup/static/less/libraries/components/map.less
+++ b/markup/static/less/libraries/components/map.less
@@ -70,21 +70,21 @@
     }
   }
 
-  #zp-hover {
+  .zp-hover {
     opacity: 0;
     &:hover {
       opacity: 1;
     }
   }
 
-  #kh-hover {
+  .kh-hover {
     opacity: 0;
     &:hover {
       opacity: 1;
     }
   }
 
-  #pl-hover {
+  .pl-hover {
     opacity: 0;
     &:hover {
       opacity: 1;
