park-drive bosch-service auto-element

--- a/markup/static/less/libraries/modules/service.less
+++ b/markup/static/less/libraries/modules/service.less
@@ -16,6 +16,22 @@
   .uk-section-service {
     padding-top: 10px;
   }
+
+  .uk-section-bosch-service {
+    .uk-col-contacts {
+      .uk-phone-holder {
+        border-bottom: none;
+      }
+      .uk-contact-phone {
+        font-size: 28px;
+      }
+
+      .uk-contact-block {
+        margin-bottom: 0;
+      }
+    }
+    
+  }
 }
 
 .hook-grid-misc() {
