--- a/markup/static/less/libraries/components/navbar.less
+++ b/markup/static/less/libraries/components/navbar.less
@@ -83,7 +83,7 @@
 
 .hook-navbar() {
   line-height: normal;
-  z-index: 2000;
+  z-index: @global-z-index + 5;
 }
 .hook-navbar-container() {}
 .hook-navbar-nav-item() {}
