--- a/markup/static/less/libraries/modules/article.less
+++ b/markup/static/less/libraries/modules/article.less
@@ -114,6 +114,13 @@
       } 
     }
 
+    &.uk-is-hover:not(:hover):not(:focus) {
+      .uk-video-overlay,
+      .uk-video-foreground {
+        opacity: 0;
+      }
+    }
+
     &:hover,
     &:focus {
       .uk-btn-video-link {
