--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -234,6 +234,18 @@
       min-width: 220px;
     }
   }
+  .uk-video-holders {
+    overflow: visible;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    .uk-video-holder {
+      min-height: 150px;
+    }
+  }
+  .uk-video-holders .swiper-slide {
+    width: 25%;
+    min-width: 220px;
+  }
 }
 
 .hook-section-misc() {
