--- a/markup/static/less/libraries/modules/contact.less
+++ b/markup/static/less/libraries/modules/contact.less
@@ -10,6 +10,12 @@
 				 pointer-events: auto;
 			 }
 		}
+		.uk-hero-background {
+			top: 70px;
+		}
+		.uk-heading {
+			margin-top: 6%;
+		}
 	}
 	.uk-hero-contacts {
 		.uk-hero-foreground {
