home page updated

--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -106,4 +106,16 @@
             </div>
         </a>
     </div>
+    <div>
+        <a href="#" class="uk-card uk-card-feature">
+            <div class="uk-card-left">
+                <div class="uk-card-icon">
+                    {{Icon iconName="report"}}
+                </div>
+            </div>
+            <div class="uk-card-body">
+                <div class="uk-card-title">Корпоративные продажи</div>
+            </div>
+        </a>
+    </div>
 </div>
