--- a/markup/static/less/libraries/components/brand.less
+++ b/markup/static/less/libraries/components/brand.less
@@ -44,4 +44,12 @@
       min-width: 120px;
     }
   }
+
+  .uk-section-brands-highlight {
+    .uk-grid + .uk-grid, .uk-grid > .uk-grid-margin, * + .uk-grid-margin {
+      @media (min-width: @breakpoint-medium) {
+        margin-top: 90px;
+      }
+    }
+  }
 }
