--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -51,10 +51,12 @@
     }
 
     .uk-card-img {
-      height: 110px;
+      height: 140px;
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+      border-radius: @global-border-radius;
 
       img {
         object-fit: contain;
